// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsTranslationEditForm > renders correctly in entity adding 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Translation"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="false"
                coloractiveprepend="false"
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Language"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                itemflag="languageId"
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemsmap="[object Object]"
                itemtertiarytext=""
                itemtext="name"
                itemvalue="languageId"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Select language"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                counter="100"
                filled="true"
                grow="false"
                hint="Translation"
                maxlength="100"
                modelmodifiers="[object Object]"
                modelvalue=""
                persistent-hint=""
                placeholder="Translation"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Translation')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
                variant="filled"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Apply"
        textclass=""
        type="primary-light"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;

exports[`SettingsTranslationEditForm > renders correctly in entity editing 1`] = `
<div
  data-v-app=""
>
  
  <dialog-toolbar-stub
    color="white"
    data-v-44323e6a=""
    iconcolor="secondary-text"
    title="Edit translation"
    titleicon=""
  />
  <v-card-stub
    border="false"
    class="elevation-0"
    data-v-44323e6a=""
    density="default"
    disabled="false"
    exact="false"
    flat="false"
    hover="false"
    loading="false"
    replace="false"
    ripple="true"
    tag="div"
    tile="false"
    variant="elevated"
  >
    <div
      class="dialog-content"
      data-v-44323e6a=""
    >
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        <v-form-stub
          disabled="false"
          fastfail="false"
          modelvalue="true"
          validateon="input"
        >
          <v-row-stub
            dense="false"
            density="default"
            nogutters="false"
            tag="div"
          >
            <v-col-stub
              class="px-1 mb-2"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <selection-input-stub
                checkbox="false"
                coloractiveprepend="false"
                disabled="false"
                disabledvalues=""
                emittoggleall="false"
                emptyequalsallselected="false"
                error="false"
                filled="true"
                groupidkey="id"
                groups=""
                groupsorderby="name"
                hiddenitemscount="0"
                hidesearch="true"
                hint="Language"
                inverted="false"
                isgroupedselect="false"
                issingleselect="true"
                itemflag="languageId"
                itemgroupidkey="groupId"
                items="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
                itemsecondarytext=""
                itemsmap="[object Object]"
                itemtertiarytext=""
                itemtext="name"
                itemvalue="languageId"
                loading="false"
                menuinputtype="primary"
                modelvalue=""
                numericorderby="false"
                placeholder="Select language"
                prependtext=""
                removenonexistentselections="false"
                required="true"
                showemptyarrayasallselected="false"
                someselected="false"
                totalcount="0"
                usechips="false"
              />
            </v-col-stub>
            <v-col-stub
              class="px-1"
              cols="12"
              lg="false"
              md="false"
              sm="false"
              tag="div"
              xl="false"
              xxl="false"
            >
              <evocon-v-input-stub
                counter="100"
                filled="true"
                grow="false"
                hint="Translation"
                maxlength="100"
                modelmodifiers="[object Object]"
                modelvalue=""
                persistent-hint=""
                placeholder="Translation"
                required=""
                rules="(v) => !!v && !!v.trim() || _ctx.$t('Translation')"
                truncateinput="false"
                type="text"
                usechip="false"
                validate-on="blur"
                variant="filled"
              />
            </v-col-stub>
          </v-row-stub>
        </v-form-stub>
        
      </div>
      <!--v-if-->
      <div
        class="px-3"
        data-v-44323e6a=""
      >
        
        
      </div>
    </div>
    <v-card-actions-stub
      class=""
      data-v-44323e6a=""
      tag="div"
    >
      
      <v-spacer-stub
        tag="div"
      />
      <evocon-v-button-stub
        color=""
        icon=""
        iconcolor=""
        text="Cancel"
        textclass=""
        type="secondary"
      />
      <evocon-v-button-stub
        color="primary"
        icon=""
        iconcolor=""
        text="Save"
        textclass=""
        type="primary"
      />
      
    </v-card-actions-stub>
  </v-card-stub>
  
</div>
`;
